--- a/cantact.html
+++ b/cantact.html
@@ -2,7 +2,7 @@
 <html lang="ja">
     <head>
         <meta charset="utf-8">
-        <title>WCB Cafe - MENU</title>
+        <title>WCB Cafe - CONTACT</title>
         <meta name="description" content="ブレンドコーヒーとヘルシーなオーガニックフードを提供するカフェ">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--ファビコン-->
@@ -21,7 +21,7 @@
     </head>
 
     <body>
-    <div class="sub-cover cover-menu">
+    <div class="sub-cover cover-contact">
         <header class="page-header wrapper">
             <h1 class="align-center">
                 <a href="index.html"><img class="logo" src="images/logo.svg" alt="WCBカフェ ホーム"></a>
@@ -34,48 +34,9 @@
                 </ul>
             </nav>
         </header>
-        <h2 class="page-title font-english">Menu</h2> <!--←見出し変更-->
+        <h2 class="page-title font-english">Contact</h2> <!--←見出し変更-->
     </div>
 
-    <main class="wrapper grid">
-        <div class="item item-big">
-            <img src="images/menu1.webp" alt="">
-            <p>アボカドトースト</p>
-        </div>
-        <div class="item">
-            <img src="images/menu2.webp" alt="">
-            <p>生ハムカプレーゼ</p>
-        </div>
-        <div class="item">
-            <img src="images/menu3.webp" alt="">
-            <p>ペンネボロネーゼ</p>
-        </div>
-        <div class="item">
-            <img src="images/menu4.webp" alt="">
-            <p>ムール貝のワイン蒸し</p>
-        </div>
-        <div class="item">
-            <img src="images/menu5.webp" alt="">
-            <p>根菜のグリル</p>
-        </div>
-        <div class="item">
-            <img src="images/menu6.webp" alt="">
-            <p>ジェノベーゼ</p>
-        </div>
-        <div class="item">
-            <img src="images/menu7.webp" alt="">
-            <p>ラザニア</p>
-        </div>
-        <div class="item">
-            <img src="images/menu8.webp" alt="">
-            <p>カプチーノ</p>
-        </div>
-        <div class="item">
-            <img src="images/menu9.webp" alt="">
-            <p>チョコブラウニー</p>
-        </div>
-    </main>
-    
     <footer class="page-footer">
         <h3 class="heading-large font-english">Information</h3>
         <table class="info">
