--- a/cantact.html
+++ b/cantact.html
@@ -37,6 +37,35 @@
         <h2 class="page-title font-english">Contact</h2> <!--←見出し変更-->
     </div>
 
+    <main class="wrapper">
+        <section class="location">
+            <div class="location-info">
+                <h3 class="heading-medium font-english">Information</h3>
+                <table class="info">
+                    <tr>
+                        <th>住所</th>
+                        <td>東京都港区六本木 0-0 〇〇〇</td>
+                    </tr>
+                    <tr>
+                        <th>電話</th>
+                        <td>03-1111-xxxx</td>
+                    </tr>
+                    <tr>
+                        <th>営業時間</th>
+                        <td>10:00〜20:00</td>
+                    </tr>
+                    <tr>
+                        <th>定休日</th>
+                        <td>水曜</td>
+                    </tr>
+                </table>
+            </div>
+            <div class="location-map">
+                Googleマップ
+            </div>
+        </section>
+    </main>
+
     <footer class="page-footer">
         <h3 class="heading-large font-english">Information</h3>
         <table class="info">
