--- a/cantact.html
+++ b/cantact.html
@@ -61,7 +61,7 @@
                 </table>
             </div>
             <div class="location-map">
-                Googleマップ
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6491.061669971728!2d139.71355288249512!3d35.56528755426597!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018605cca9b0b8f%3A0x294e9fe055effe39!2z5p2x5Lqs5bel56eR5aSn5a2mIOiSsueUsOOCreODo-ODs-ODkeOCuQ!5e0!3m2!1sja!2sjp!4v1765259592007!5m2!1sja!2sjp" width="720" height="320" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </section>
     </main>
