--- a/contact.html
+++ b/contact.html
@@ -64,6 +64,18 @@
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6491.061669971728!2d139.71355288249512!3d35.56528755426597!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018605cca9b0b8f%3A0x294e9fe055effe39!2z5p2x5Lqs5bel56eR5aSn5a2mIOiSsueUsOOCreODo-ODs-ODkeOCuQ!5e0!3m2!1sja!2sjp!4v1765259592007!5m2!1sja!2sjp" width="720" height="320" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </section>
+
+        <section class="email">
+            <h3 class="heading-medium font-english">Contact</h3>
+            <p>
+                以下のボタンからメールにてお問い合わせください。2営業日以内にご返信させていただいております。
+                もし数日中に返信がない場合は、正しく受信できなかった可能性がありますので、
+                恐れ入りますが下記のSNS,もしくはお電話にて再度ご連絡ください。
+            </p>
+            <div class="align-center">
+                <a class="btn" herf="mailto:info@example.com">お問い合わせ</a>
+            </div>
+        </section>
     </main>
 
     <footer class="page-footer">
